fix for activity feed not showing up

--- a/sass/_project-sass/_project-Main.scss
+++ b/sass/_project-sass/_project-Main.scss
@@ -2294,7 +2294,7 @@ pre, code {
   color: #FFFFFF;
 }
 
-.left-col {
+.editor .left-col {
   padding: 1rem;
   overflow-y: scroll;
 
@@ -2303,7 +2303,7 @@ pre, code {
   }
 }
 
-.right-col {
+.editor .right-col {
   padding: 1rem;
   position: relative;
 
